Bug 323213 - [frameworks] Okular could not render FB2 (Fiction Book) format properly
Summary: [frameworks] Okular could not render FB2 (Fiction Book) format properly
Status: RESOLVED FIXED
Alias: None
Product: okular
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR major
Target Milestone: ---
Assignee: Okular developers
URL: http://gribuser.ru/xml/fictionbook/2....
Keywords:
Depends on:
Blocks:
 
Reported: 2013-08-06 07:34 UTC by Mykola Krachkovsky
Modified: 2016-07-13 01:23 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Mykola Krachkovsky 2013-08-06 07:34:12 UTC
Okular version: 0.16.97 (from KDE SC 4.10.97 aka 4.11 RC2)

Okular doesn't render Fiction Book files properly. English texts are displayed as plain xml. Ukrainian or russian ones aren't displayed at all (just one empty page). This is true for me for every FB2 I have.

Reproducible: Always

Steps to Reproduce:
1. Download any FB2 (russian: http://gribuser.ru/xml/fictionbook/2.0/example.fb2)
2. Open it using okular
Actual Results:  
Empty page for at least russian/ukrainian (see example url), and plain xml for english texts.

Expected Results:  
Well-formated book (as in Okular from KDE SC 4.10).
Comment 1 Yuri Chornoivan 2013-08-06 15:44:16 UTC
Confirmed for the current git/master
Comment 2 Albert Astals Cid 2013-08-06 20:35:08 UTC
Just commited a fix, will be there for 4.11.0 thanks for the report!
Comment 3 Mykola Krachkovsky 2013-08-07 01:25:36 UTC
Thanks for answer and fix!
Comment 4 Mykola Krachkovsky 2016-04-04 08:40:45 UTC
This bug happens again for Okular5. Instead of FB2 backend TXT backend is working for *.fb2 files. So there is no text or full xml is shown.
Comment 5 Albert Astals Cid 2016-04-04 09:54:16 UTC
There is no such thing as Okular5, you should really not be using the frameworks branch unless you're prepared to fix the bugs you encounter.
Comment 6 Mykola Krachkovsky 2016-04-04 10:00:00 UTC
I understand frameworks branch is under developepment ATM, just thought it would be easy to port stable version patch to frameworks. Should I close this bug?
Comment 7 Albert Astals Cid 2016-04-05 22:09:38 UTC
In the future, don't reuse a bug that was fixed 3 years ago, it doesn't make sense thinking that code that was added 3 years ago somehow vanished.
Comment 8 Mykola Krachkovsky 2016-04-06 13:12:22 UTC
Sorry for that.
Comment 9 Martin Sandsmark 2016-07-13 01:23:55 UTC
Git commit 89e5f175426aea6139c118d11e26386f60572c1b by Martin T. H. Sandsmark.
Committed on 13/07/2016 at 01:23.
Pushed by sandsmark into branch 'frameworks'.

Improve matching of generators

Instead of trying to use the plain text generator for everything, try to
find a more specialized one first.

M  +16   -0    core/document.cpp

http://commits.kde.org/okular/89e5f175426aea6139c118d11e26386f60572c1b