Improve matching of generators

Instead of trying to use the plain text generator for everything, try to
find a more specialized one first.

BUG: 323213